import Foundation
import shared

struct AccessibilityIdentifier {
    static let widgetDetailsView = "AccessibilityIdentifierWidgetDetailsView"
    static let searchField = "AccessibilityIdentifierSearchWidgets"
    static let bleDevicesTable = "AccessibilityIdentifierBLEDevicesTable"
    static let bleFilterSegmentSelector = "AccessibilityIdentifierBLEFilterSegmentSelector"
    static let oldMotoricaStartRoot = "AccessibilityIdentifierOldMotoricaStartRoot"
    static let mainTabBarRoot = "AccessibilityIdentifierMainTabBarRoot"
    static let mainTabBarColorProbe = "AccessibilityIdentifierMainTabBarColorProbe"
    static let mainTabGesturesItem = "AccessibilityIdentifierMainTabGesturesItem"
    static let mainTabSpecialSettingsItem = "AccessibilityIdentifierMainTabSpecialSettingsItem"
    static let mainTabServiceSettingsItem = "AccessibilityIdentifierMainTabServiceSettingsItem"
    static let widgetsResyncButton = "AccessibilityIdentifierWidgetsResyncButton"
    static let widgetsTable = "AccessibilityIdentifierWidgetsTable"
...
